Fixed whiteboard scale on IE

--- a/web/static/css/whiteboard_new.sass
+++ b/web/static/css/whiteboard_new.sass
@@ -23,7 +23,7 @@
       padding-top: 5px
       @extend #wb-buttons-forms
     &.maximized
-      max-width: initial
+      max-width: 100%
       left: 0vw
       .whiteboard-title, .whiteboard-expand, .pinboard-title, .pinboard-expand
         top: -10px
